tests/parse_print/random_perturb/set01/change-06/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-06/change-06.essence line 1, column 10:
language name has to be Essence, but given: Essencx
    line 1, column 10
    language Essencx 1.3
          ^^^^^^^